--- a/Каталог.html
+++ b/Каталог.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Home</title>
+    <title>Catalog</title>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
@@ -21,8 +21,8 @@
             <div class="main_menu">
               <div class="mm_close"></div>
               <ul class="nav">
-                <li class="active"><a href="Home.html">Home</a></li>
-                <li><a href="Catalog.html">Catalog</a><span class="arrow"><span></span></span>
+                <li><a href="Home.html">Home</a></li>
+                <li class="active"><a href="Catalog.html">Catalog</a><span class="arrow"><span></span></span>
                   <ul class="sub-menu level2">
                     <li><a href="#">Embedded technology</a><span class="arrow"><span></span></span>
                       <ul class="sub-menu level3">
@@ -95,188 +95,136 @@
         </div>
       </div>
     </header>
-    <section class="main_slider">
-      <div class="slider_item" style="background-image:url(img/banner.png)">
-        <div class="container">
-          <div class="slider_caption">
-            <div class="title">Contrary to popular!</div>
-            <div class="desc">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</div>
-            <div class="s_btn_group">
-              <div class="slick_arrow_group">
-                <button class="custom_prev ms_prev"></button>
-                <button class="custom_next ms_next"></button>
-              </div><a class="btn_default btn_red" href="#">See More</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="slider_item" style="background-image:url(img/banner.png)">
-        <div class="container">
-          <div class="slider_caption">
-            <div class="title">Contrary to popular!</div>
-            <div class="desc">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</div>
-            <div class="s_btn_group">
-              <div class="slick_arrow_group">
-                <button class="custom_prev ms_prev"></button>
-                <button class="custom_next ms_next"></button>
-              </div><a class="btn_default btn_red" href="#">See More</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="slider_item" style="background-image:url(img/banner.png)">
-        <div class="container">
-          <div class="slider_caption">
-            <div class="title">Contrary to popular!</div>
-            <div class="desc">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</div>
-            <div class="s_btn_group">
-              <div class="slick_arrow_group">
-                <button class="custom_prev ms_prev"></button>
-                <button class="custom_next ms_next"></button>
-              </div><a class="btn_default btn_red" href="#">See More</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="slider_item" style="background-image:url(img/banner.png)">
-        <div class="container">
-          <div class="slider_caption">
-            <div class="title">Contrary to popular!</div>
-            <div class="desc">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</div>
-            <div class="s_btn_group">
-              <div class="slick_arrow_group">
-                <button class="custom_prev ms_prev"></button>
-                <button class="custom_next ms_next"></button>
-              </div><a class="btn_default btn_red" href="#">See More</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="home_categories">
+    <div class="page_banner" style="background-image:url(img/banner2.png)">
       <div class="container">
-        <div class="row categories_slider">
-          <div class="col-12 col-sm-6 col-md-3 col-xl-2 slider_item"><a class="cat_item" href="#">
-              <picture><img class="white" src="img/category/1.svg"/><img class="red" src="img/category/1_red.svg"/></picture>
-              <div class="cat_name">Ovens</div></a></div>
-          <div class="col-12 col-sm-6 col-md-3 col-xl-2 slider_item"><a class="cat_item" href="#">
-              <picture><img class="white" src="img/category/2.svg"/><img class="red" src="img/category/2_red.svg"/></picture>
-              <div class="cat_name">Freezers</div></a></div>
-          <div class="col-12 col-sm-6 col-md-3 col-xl-2 slider_item"><a class="cat_item" href="#">
-              <picture><img class="white" src="img/category/3.svg"/><img class="red" src="img/category/3_red.svg"/></picture>
-              <div class="cat_name">Washing machines</div></a></div>
-          <div class="col-12 col-sm-6 col-md-3 col-xl-2 slider_item"><a class="cat_item" href="#">
-              <picture><img class="white" src="img/category/4.svg"/><img class="red" src="img/category/4_red.svg"/></picture>
-              <div class="cat_name">Microwaves</div></a></div>
-          <div class="col-12 col-sm-6 col-md-3 col-xl-2 slider_item"><a class="cat_item" href="#">
-              <picture><img class="white" src="img/category/5.svg"/><img class="red" src="img/category/5_red.svg"/></picture>
-              <div class="cat_name">Dishwashers</div></a></div>
-          <div class="col-12 col-sm-6 col-md-3 col-xl-2 slider_item"><a class="cat_item" href="#">
-              <picture><img class="white" src="img/category/6.svg"/><img class="red" src="img/category/6_red.svg"/></picture>
-              <div class="cat_name">Cooker hoods</div></a></div>
-          <div class="col-12 col-sm-6 col-md-3 col-xl-2 slider_item"><a class="cat_item" href="#">
-              <picture><img class="white" src="img/category/7.svg"/><img class="red" src="img/category/7_red.svg"/></picture>
-              <div class="cat_name">Microwaves</div></a></div>
-        </div>
-      </div>
-    </section>
-    <section class="special_offers">
-      <div class="container">
-        <h2 class="section_title">Special offers</h2>
-        <div class="row special_offers_list">
-          <div class="col-12 col-sm-6 col-md-4 col-xl-3 item">
-            <div class="special_offers_item"><a class="special_offers_item_link" href="#">
-                <picture><img src="img/image.png"/></picture>
-                <div class="title">MAUNFELD CEOK.656B</div>
-                <div class="parent_category">Ovens</div>
-                <div class="desc">Washing machine, Wideness: 600 mm, Colour: White, Working power: 2 100 Wh, Timer: Yes, Display: Yes, Child lock : Yes</div></a></div>
-          </div>
-          <div class="col-12 col-sm-6 col-md-4 col-xl-3 item">
-            <div class="special_offers_item"><a class="special_offers_item_link" href="#">
-                <picture><img src="img/image.png"/></picture>
-                <div class="title">MAUNFELD CEOK.656B</div>
-                <div class="parent_category">Ovens</div>
-                <div class="desc">Washing machine, Wideness: 600 mm, Colour: White, Working power: 2 100 Wh, Timer: Yes, Display: Yes, Child lock : Yes</div></a></div>
-          </div>
-          <div class="col-12 col-sm-6 col-md-4 col-xl-3 item">
-            <div class="special_offers_item"><a class="special_offers_item_link" href="#">
-                <picture><img src="img/image.png"/></picture>
-                <div class="title">MAUNFELD CEOK.656B</div>
-                <div class="parent_category">Ovens</div>
-                <div class="desc">Washing machine, Wideness: 600 mm, Colour: White, Working power: 2 100 Wh, Timer: Yes, Display: Yes, Child lock : Yes</div></a></div>
-          </div>
-          <div class="col-12 col-sm-6 col-md-4 col-xl-3 item">
-            <div class="special_offers_item"><a class="special_offers_item_link" href="#">
-                <picture><img src="img/image.png"/></picture>
-                <div class="title">MAUNFELD CEOK.656B</div>
-                <div class="parent_category">Ovens</div>
-                <div class="desc">Washing machine, Wideness: 600 mm, Colour: White, Working power: 2 100 Wh, Timer: Yes, Display: Yes, Child lock : Yes</div></a></div>
+        <div class="catalog_banner_desc">
+          <div class="title">Hurry up!</div>
+          <div class="sub_title">Only until the end of March 2019 discounts on all ovens!</div>
+          <div class="row">
+            <div class="col-7 col-sm-6 col-md-6 col-xl-5 ai_center"><a class="btn_default btn_white2" href="#">See More</a></div>
+            <div class="col-5 col-sm-6 col-md-6 col-xl-7">
+              <div class="sale">-50%</div>
+            </div>
           </div>
         </div>
-        <div class="text-center"><a class="btn_default btn_white" href="#">See More</a></div>
       </div>
-    </section>
-    <section class="about_Shop">
+    </div>
+    <section class="page_content">
       <div class="container">
-        <h2 class="section_title">About Shop</h2>
-        <div class="content">
+        <ul class="breadcrumb">
+          <li class="breadcrumb-item"><a href="#">Home</a></li>
+          <li class="breadcrumb-item"><a href="#content">Catalog</a></li>
+        </ul>
+        <div class="row category_list">
+          <div class="col-12 col-sm-6 col-md-4 col-xl-3">
+            <div class="category_item">
+              <div class="c_body"><a href="#">
+                  <picture><img class="white" src="img/category/1.svg"/><img class="red" src="img/category/1_red.svg"/></picture></a><a class="cat_name" href="#"><span>Ovens</span></a></div>
+              <div class="c_footer">
+                <ul>
+                  <li><a href="#">Electric ovens</a></li>
+                  <li><a href="#">Gas ovens</a></li>
+                  <li><a href="#">Compact ovens with microwave</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-md-4 col-xl-3">
+            <div class="category_item">
+              <div class="c_body"><a href="#">
+                  <picture><img class="white" src="img/category/2.svg"/><img class="red" src="img/category/2_red.svg"/></picture></a><a class="cat_name" href="#"><span>Freezers</span></a></div>
+              <div class="c_footer">
+                <ul>
+                  <li><a href="#">Electric ovens</a></li>
+                  <li><a href="#">Gas ovens</a></li>
+                  <li><a href="#">Compact ovens with microwave</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-md-4 col-xl-3">
+            <div class="category_item">
+              <div class="c_body"><a href="#">
+                  <picture><img class="white" src="img/category/3.svg"/><img class="red" src="img/category/3_red.svg"/></picture></a><a class="cat_name" href="#"><span>Washing machines</span></a></div>
+              <div class="c_footer">
+                <ul>
+                  <li><a href="#">Electric ovens</a></li>
+                  <li><a href="#">Gas ovens</a></li>
+                  <li><a href="#">Compact ovens with microwave</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-md-4 col-xl-3">
+            <div class="category_item">
+              <div class="c_body"><a href="#">
+                  <picture><img class="white" src="img/category/4.svg"/><img class="red" src="img/category/4_red.svg"/></picture></a><a class="cat_name" href="#"><span>Microwaves</span></a></div>
+              <div class="c_footer">
+                <ul>
+                  <li><a href="#">Electric ovens</a></li>
+                  <li><a href="#">Gas ovens</a></li>
+                  <li><a href="#">Compact ovens with microwave</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-md-4 col-xl-3">
+            <div class="category_item">
+              <div class="c_body"><a href="#">
+                  <picture><img class="white" src="img/category/5.svg"/><img class="red" src="img/category/5_red.svg"/></picture></a><a class="cat_name" href="#"><span>Dishwashers</span></a></div>
+              <div class="c_footer">
+                <ul>
+                  <li><a href="#">Electric ovens</a></li>
+                  <li><a href="#">Gas ovens</a></li>
+                  <li><a href="#">Compact ovens with microwave</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-md-4 col-xl-3">
+            <div class="category_item">
+              <div class="c_body"><a href="#">
+                  <picture><img class="white" src="img/category/6.svg"/><img class="red" src="img/category/6_red.svg"/></picture></a><a class="cat_name" href="#"><span>Cooker hoods</span></a></div>
+              <div class="c_footer">
+                <ul>
+                  <li><a href="#">Electric ovens</a></li>
+                  <li><a href="#">Gas ovens</a></li>
+                  <li><a href="#">Compact ovens with microwave</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-md-4 col-xl-3">
+            <div class="category_item">
+              <div class="c_body"><a href="#">
+                  <picture><img class="white" src="img/category/7.svg"/><img class="red" src="img/category/7_red.svg"/></picture></a><a class="cat_name" href="#"><span>Microwaves</span></a></div>
+              <div class="c_footer">
+                <ul>
+                  <li><a href="#">Electric ovens</a></li>
+                  <li><a href="#">Gas ovens</a></li>
+                  <li><a href="#">Compact ovens with microwave</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-md-4 col-xl-3">
+            <div class="category_item">
+              <div class="c_body"><a href="#">
+                  <picture><img class="white" src="img/category/8.svg"/><img class="red" src="img/category/8_red.svg"/></picture></a><a class="cat_name" href="#"><span>Ovens</span></a></div>
+              <div class="c_footer">
+                <ul>
+                  <li><a href="#">Electric ovens</a></li>
+                  <li><a href="#">Gas ovens</a></li>
+                  <li><a href="#">Compact ovens with microwave</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="content catalog_desc">
           <p>Nec pharetra leo fusce urna ligula magna lectus quisque, proin porta justo rutrum, nulla, sed rutrum commodo — adipiscing ligula. Proin, non molestie gravida duis arcu vulputate — nulla ligula vitae. Odio amet odio eu tempus et vivamus bibendum congue, sodales.</p>
           <p>Vivamus sed arcu enim auctor nulla odio nam quam vulputate curabitur mattis risus leo curabitur fusce nulla sem pellentesque sem rutrum quam donec. Vitae urna vitae: et donec vitae nam integer proin — in vitae justo ornare mattis et. Non justo vulputate morbi bibendum, in eget tellus donec commodo enim integer curabitur sodales ut vitae nam bibendum maecenas ornare rutrum nam. At molestie vivamus magna tellus sit cursus tempus vulputate arcu nec, donec non congue.</p>
           <p>Commodo sed ipsum fusce commodo amet mattis, congue pharetra duis sem massa metus quisque sodales adipiscing, porta nulla pharetra amet. Fusce at nam odio nibh orci ornare rutrum curabitur quam at risus rutrum magna pharetra duis eget sed sagittis, proin sagittis sit, amet: commodo.</p>
-          <div class="row">
-            <div class="col-12 col-sm-12 col-md-5 col-xl-4">
-              <p>Nec pharetra leo fusce urna ligula magna lectus quisque, proin porta justo rutrum, nulla, sed rutrum commodo — adipiscing ligula. Proin, non molestie gravida duis arcu vulputate — nulla ligula vitae. Odio amet odio eu tempus et vivamus bibendum congue, sodales.</p>
-              <p>Vivamus sed arcu enim auctor nulla odio nam quam vulputate curabitur mattis risus leo curabitur fusce nulla sem pellentesque sem rutrum quam donec. Vitae urna vitae: et donec vitae nam integer proin — in vitae justo ornare mattis et. Non justo vulputate morbi bibendum, in eget tellus donec.</p>
-            </div>
-            <div class="col-12 col-sm-12 col-md-7 col-xl-8"><iframe width="100%" height="435" src="https://www.youtube.com/embed/kHbgoT4Kj3c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="home_news">
-      <div class="container">
-        <h2 class="section_title">News</h2>
-        <div class="row news_list">
-          <div class="col-12 colsm-12 col-md-12 col-xl-6">
-            <div class="news_item large"><a href="#"><img src="img/news.png"/></a>
-              <div class="item_body"><a class="item_title" href="#">Vestibulum ut ipsum vitae eros sodales ultrices sit amet rutrum dui.</a>
-                <div class="meta">
-                  <div class="date">Jan, 8 / 2019</div><a class="read_more" href="#">Read more</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 colsm-12 col-md-12 col-xl-6">
-            <div class="row">
-              <div class="col-12">
-                <div class="news_item"><a href="#"><img src="img/news2.png"/></a>
-                  <div class="item_body"><a class="item_title" href="#">Vivamus elementum semper nisi.</a>
-                    <div class="meta">
-                      <div class="date">Jan, 8 / 2019</div><a class="read_more" href="#">Read more</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-12 col-sm-12 col-md-6 col-xl-6">
-                <div class="news_item"><a href="#"><img src="img/news3.png"/></a>
-                  <div class="item_body"><a class="item_title" href="#">But I must explain to you how all this mistaken idea.</a>
-                    <div class="meta">
-                      <div class="date">Jan, 8 / 2019</div><a class="read_more" href="#">Read more</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-12 col-sm-12 col-md-6 col-xl-6">
-                <div class="news_item"><a href="#"><img src="img/news4.png"/></a>
-                  <div class="item_body"><a class="item_title" href="#">Sed ut perspiciatis unde omnis iste.</a>
-                    <div class="meta">
-                      <div class="date">Jan, 8 / 2019</div><a class="read_more" href="#">Read more</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
     </section>
